--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <title>Todo List</title>
 </head>
 <body>
-    <div class="todo-container">
-        <h1 class="title">MA TODO LIST</h1>
-        <ul class="todo-list"></ul>
+    <div class="main-container">
+        <div class="todo-container">
+            <h1 class="title">MA TODO LIST</h1>
+            <ul class="todo-list"></ul>
+        </div>
+        <form>
+            <input type="text" class="todo-input" placeholder="Votre tâche">
+            <button class="todo-button" type="submit">
+                Add new <span style="font-size: 2.5rem ; margin-left: .5rem;">+</span>
+            </button>
+        </form>
     </div>
-    <form>
-        <input type="text" class="todo-input" placeholder="Votre tâche">
-        <button class="todo-button" type="submit">
-            Add new <span style="font-size: 2.5rem ; margin-left: .5rem;">+</span>
-        </button>
-    </form>
 
 </body>
 </html>
